fix: increase z-index for cert modal dropdowns

--- a/assets/css/certificate-modal.css
+++ b/assets/css/certificate-modal.css
@@ -107,5 +107,5 @@ span.table-action-sep {
 }
 
 .sst-select2-dropdown {
-    z-index: 10000;
+    z-index: 100002;
 }
